packages/web-qwik/src/components/main/about.module.scss
.about {
  display: flex;
  justify-content: center;
}

.link-container {
  display: flex;
  margin-block: 2rem;
  justify-content: space-around;
}

.link {
  all: unset;
  box-sizing: content-box;
  padding: 0.75rem;
  border-radius: 0.25rem;
  display: inline-flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
  cursor: pointer;
  transition: opacity 200ms;

  &:hover {
    opacity: 0.8;
    background-color: rgba(#59a7b5, 0.1);
  }
}

.badge-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(6rem, 1fr));
  gap: 2rem 0.25rem;
  user-select: none;
}

.badge-container-fallback {
  position: relative;
  width: 100%;
  height: 32rem;
}

